Fixing showcase background image to display on mobile browsers.

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,10 +91,7 @@ section .item {
 
 /* Showcase */
 #showcase {
-    background-attachment: fixed;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(0, 0, 0, 0.7)), to(rgb(0, 0, 0, 0.7))), url("../images/showcase.jpg");
-    background-image: -webkit-linear-gradient(rgb(0, 0, 0, 0.7), rgb(0, 0, 0, 0.7)), url("../images/showcase.jpg");
-    background-image: -o-linear-gradient(rgb(0, 0, 0, 0.7), rgb(0, 0, 0, 0.7)), url("../images/showcase.jpg");
+    background-attachment: scroll;
     background-image: linear-gradient(rgb(0, 0, 0, 0.7), rgb(0, 0, 0, 0.7)), url("../images/showcase.jpg");
     background-position: center;
     background-repeat: no-repeat;
